perf/stability/cockroachdb/templates/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cockroachdb-serviceentry
spec:
  hosts:
  - cockroachdb-cockroachdb-0.cockroachdb-cockroachdb.istio-stability-cockroachdb.svc.cluster.local
  - cockroachdb-cockroachdb-1.cockroachdb-cockroachdb.istio-stability-cockroachdb.svc.cluster.local
  - cockroachdb-cockroachdb-2.cockroachdb-cockroachdb.istio-stability-cockroachdb.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 26257
    name: grpc
    protocol: GRPC
  - number: 8080
    name: http
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cockroachdb-serviceentry
spec:
  hosts:
  - cockroachdb-cockroachdb-public.istio-stability-cockroachdb.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 26257
    name: grpc
    protocol: GRPC
  - number: 8080
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
  - address: cockroachdb-cockroachdb-0.cockroachdb-cockroachdb.istio-stability-cockroachdb.svc.cluster.local
  - address: cockroachdb-cockroachdb-1.cockroachdb-cockroachdb.istio-stability-cockroachdb.svc.cluster.local
  - address: cockroachdb-cockroachdb-2.cockroachdb-cockroachdb.istio-stability-cockroachdb.svc.cluster.local
